--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ permalink: pretty
 # ----------------------- #
 
 social:
-  - title: email
+  - title: envelope
     url: mailto:nancytao@gatech.edu
   - title: github
     url: https://github.com/nancytao
