Moved Google analytics handling

--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,10 @@ description: > # "Nancy Tao is a computer science student at Georgia Tech intere
 # Build settings
 markdown: kramdown
 permalink: pretty
+
+# Settings for analytics helper
+# Set 'provider' to false to turn analytics off globally.
+analytics :
+    provider : google
+    google :
+        tracking_id : 'UA-69825583-1'
