Updated description to reflect new threads

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: http://nancytao.com
 title: Nancy Tao
 email: nancytao@gatech.edu
 author: Nancy Tao
-description: Nancy Tao is a computer science student at Georgia Tech interested in artificial intelligence and design.
+description: Nancy Tao is a computer science student at Georgia Tech interested in artificial intelligence and information security.
 
 # ----------------------- #
 #    Jekyll & Plugins     #
